--- a/index.html
+++ b/index.html
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mi Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-  <header>
-    <h1>John Doe</h1>
-    <nav>
-      <a href="#about">Sobre mí</a>
-      <a href="#projects">Proyectos</a>
-      <a href="#contact">Contacto</a>
-    </nav>
-  </header>
+    <header>
+        <h1>John Doe</h1>
+        <nav>
+            <a href="#about">Sobre mí</a>
+            <a href="#projects">Proyectos</a>
+            <a href="#contact">Contacto</a>
+        </nav>
+    </header>
 
-  <main>
-    <section id="about">
-      <h2>Sobre mí</h2>
-      <p>Soy un desarrollador full stack con pasión por crear soluciones útiles y funcionales.</p>
-    </section>
+    <main>
+        <section id="about">
+            <h2>Sobre mí</h2>
+            <p>Soy un desarrollador full stack con pasión por crear soluciones útiles y funcionales.</p>
+        </section>
 
-    <section id="projects">
-      <h2>Proyectos</h2>
-      <div class="project">
-        <h3>Proyecto 1</h3>
-        <img src="https://img.freepik.com/free-vector/placeholder-concept-illustration_114360-4727.jpg" alt="Captura de pantalla del Proyecto 1" />
-        <p>Es un proyecto de prueba para rellenar información de la pagina web</p>
-      </div>
-    </section>
+        <section id="projects">
+            <h2>Proyectos</h2>
+            <div class="project">
+                <h3>Proyecto 1</h3>
+                <img src="https://img.freepik.com/free-vector/placeholder-concept-illustration_114360-4727.jpg"
+                    alt="Captura de pantalla del Proyecto 1" />
+                <p>Es un proyecto de prueba para rellenar información de la pagina web</p>
+            </div>
+            <div class="project">
+                <h3>Proyecto 2</h3>
+                <img src="https://img.freepik.com/free-vector/placeholder-concept-illustration_114360-4727.jpg"
+                    alt="Captura de pantalla del Proyecto 1" />
+                <p>Otro ejemplo</p>
+            </div>
+            <div class="project">
+                <h3>Proyecto 3</h3>
+                <img src="https://img.freepik.com/free-vector/placeholder-concept-illustration_114360-4727.jpg"
+                    alt="Captura de pantalla del Proyecto 1" />
+                <p>Es un proyecto de prueba para rellenar información de la pagina web</p>
+            </div>
+        </section>
 
-    <section id="contact">
-      <h2>Contacto</h2>
-      <form id="contact-form">
-        <label for="name">Nombre:</label>
-        <input type="text" id="name" name="name" required />
+        <section id="contact">
+            <h2>Contacto</h2>
+            <form id="contact-form">
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name" required />
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required />
 
-        <button type="submit">Enviar</button>
-      </form>
-    </section>
-  </main>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2025 Juan Manuel Lamoca</p>
-  </footer>
+    <footer>
+        <p>&copy; 2025 Juan Manuel Lamoca</p>
+    </footer>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
